Add tags to OpenAPI.
